--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body id="body">
 
+    <h1 id="title">Come Explore..</h1>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -21,14 +22,14 @@
 
           <div class="carousel-item active">
              <div class="container" >
-                <image id="img1" src="public.js/mountain.jpg"></image>
+                <image id="img1" src="public.js/national.jpg"></image>
                 <p id="p">"hello"</p>
             </div>
          </div>
 
     <div class="carousel-item">
     <div class="container">
-      <image id="img2" src="public.js/me.jpg"></image>
+      <image id="img2" src="public.js/national.jpg"></image>
     </div>
     </div>
 
@@ -42,10 +43,11 @@
 
      <form id="form">
         <input id="input" type="text" name="search" value="search by state"></input>
+        <input type="submit" value="submit"></input>
      </form>
 
 
-    <div id="container" class="container">
+    <div id="container" class="containerone">
        <div id="card" class="card" >
             <img id="cardimage" src="public.js/me.jpg" class="card-img-top" alt="card">
                 <div class="card-body">
@@ -57,8 +59,8 @@
      </div>
 
      
-
-
+     <!-- <iframe src="" height="300px" width="700px"></iframe> -->
+     <!-- <iframe id="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12206858.82888751!2d-106.30422782815369!3d37.657987188589416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sus!4v1733103103039!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
 
      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
