--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <div id="container" class="containerone">
        <div id="card" class="card" >
+        <i class="fa-regular fa-star"></i>
             <img id="cardimage" src="public.js/me.jpg" class="card-img-top" alt="card">
                 <div class="card-body">
                     <h5 class="card-title">ParkName</h5>
