--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
      </div>
 
      <form id="form">
-        <input id="input" type="text" name="search" value="search by state"></input>
+        <input id="input" type="text" name="search" value="type in a state abbreviation"></input>
         <input type="submit" value="submit"></input>
      </form>
 
-
+      <h1 id="label">TOP PARKS IN TEXAS</h1>
     <div id="container" class="containerone">
        <div id="card" class="card" >
-        <i class="fa-regular fa-star"></i>
+        <span id="star">&#9733</span>
             <img id="cardimage" src="public.js/me.jpg" class="card-img-top" alt="card">
                 <div class="card-body">
                     <h5 class="card-title">ParkName</h5>
@@ -58,6 +58,11 @@
                 </div>
        </div>
      </div>
+
+     <div id="parkinfo" class="hidden">
+
+
+      </div>
 
      
      <!-- <iframe src="" height="300px" width="700px"></iframe> -->
