--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
 
       </div>
 
+      <div id="containertwo">
+        <img  id="stargazing" src="public.js/stargazing.jpg"></img>
+        <img  id="hiking" src="public.js/hiking.jpg"></img>
+        <img  id="kayaking" src="public.js/kayaking.jpg"></img>
+        <img  id="camping" src="public.js/camping.jpg"></img>
+        <img  id="horseback" src="public.js/horseback.jpg"></img>
+      </div>
+
+      <div id="containerthree">
+       
+
+      </div>
+
+
      
      <!-- <iframe src="" height="300px" width="700px"></iframe> -->
      <!-- <iframe id="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12206858.82888751!2d-106.30422782815369!3d37.657987188589416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sus!4v1733103103039!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
