desctructuring variable assignment

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
       </div>
 
+      <h1 id="label2">Explore by activity</h1>
       <div id="containertwo">
         <img  id="stargazing" src="public.js/stargazing.jpg"></img>
         <img  id="hiking" src="public.js/hiking.jpg"></img>
@@ -72,6 +73,7 @@
         <img  id="horseback" src="public.js/horseback.jpg"></img>
       </div>
 
+      <h1 id="label3">Best Parks for</h1>
       <div id="containerthree">
        
 
