--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
          <div class="carousel-item">
          <div class="container">
-         <image id="img3" src="public.js/camping oiut.jpg"></image>
+         <image id="img3" src="public.js/camping oiutr.jpg"></image>
          </div>
           </div>
           </div>
@@ -48,7 +48,8 @@
      </form>
     <!-- form -->
       <h1 id="label">TOP PARKS IN TEXAS</h1>
-      <button id="left"class="left" onclick="leftScroll()">Left</button>
+      <img id="left" src="public.js/left button.png" class="left"></img>
+      <!-- <button id="left"class="left" >Left</button> -->
     <div id="container" class="containerone">
       <!-- <button id="left"class="left" onclick="leftScroll()">Left</button> -->
 
@@ -82,7 +83,8 @@
        </div>
        <!-- <button id="right" class="right" onclick="rightScroll()">Right</button> -->
      </div>
-     <button id="right" class="right" >Right</button>
+     <!-- <button id="right" class="right" >Right</button> -->
+     <img id="right" src="public.js/right button.png" class="right"></img>
      <!-- onclick="rightScroll() -->
 
       <div id="parkinfo" class="hidden">
