--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      </form>
     <!-- form -->
       <h1 id="label">TOP PARKS IN TEXAS</h1>
-      <img id="left" src="public.js/left button.png" class="left"></img>
+      <img id="left" src="public.js/arrow.png" class="left"></img>
       <!-- <button id="left"class="left" >Left</button> -->
     <div id="container" class="containerone">
       <!-- <button id="left"class="left" onclick="leftScroll()">Left</button> -->
@@ -84,7 +84,7 @@
        <!-- <button id="right" class="right" onclick="rightScroll()">Right</button> -->
      </div>
      <!-- <button id="right" class="right" >Right</button> -->
-     <img id="right" src="public.js/right button.png" class="right"></img>
+     <img id="right" src="public.js/arrow.png" class="right"></img>
      <!-- onclick="rightScroll() -->
 
       <div id="parkinfo" class="hidden">
