--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      
        <div id="card" class="card" >
         <span id="star">&#9733</span>
-            <img id="cardimage" src="public.js/me.jpg" class="card-img-top" alt="card">
+            <img id="cardimage" src="public.js/kel.jpg" class="card-img-top" alt="card">
                 <div class="card-body">
                     <h5 class="card-title">ParkName</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">State</h6>
