--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ATXtrail</title>
+    <title>DayTripper</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
   </head>
@@ -74,13 +74,32 @@
        </div>
        <div id="card" class="card" >
         <span id="star">&#9733</span>
-            <img id="cardimage" src="public.js/me.jpg" class="card-img-top" alt="card">
+            <img id="cardimage" src="public.js/mountain.jpg" class="card-img-top" alt="card">
                 <div class="card-body">
                     <h5 class="card-title">ParkName</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">State</h6>
                     <p class="card-text">parkinfo</p>
                 </div>
        </div>
+       <div id="card" class="card" >
+        <span id="star">&#9733</span>
+            <img id="cardimage" src="public.js/kayaking.jpg" class="card-img-top" alt="card">
+                <div class="card-body">
+                    <h5 class="card-title">ParkName</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">State</h6>
+                    <p class="card-text">parkinfo</p>
+                </div>
+       </div>
+       <div id="card" class="card" >
+        <span id="star">&#9733</span>
+            <img id="cardimage" src="public.js/hiking.jpg" class="card-img-top" alt="card">
+                <div class="card-body">
+                    <h5 class="card-title">ParkName</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">State</h6>
+                    <p class="card-text">parkinfo</p>
+                </div>
+       </div>
+       
        <!-- <button id="right" class="right" onclick="rightScroll()">Right</button> -->
      </div>
      <!-- <button id="right" class="right" >Right</button> -->
