--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     <!-- form -->
      <form id="form">
         <input id="input" type="text" name="search" value="type in a state abbreviation ex: TX OR type all for all Parks"></input>
+
+        <!-- <select name="states" id="states">
+          <option value="AL">AL</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+          </select> -->
         <input type="submit" value="submit"></input>
      </form>
     <!-- form -->
@@ -56,7 +63,7 @@
      
        <div id="card" class="card" >
         <span id="star">&#9733</span>
-            <img id="cardimage" src="public.js/kel.jpg" class="card-img-top" alt="card">
+            <img id="cardimage" src="public.js/stargazing.jpg" class="card-img-top" alt="card">
                 <div class="card-body">
                     <h5 class="card-title">ParkName</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">State</h6>
