--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body id="body" >
 
+
+
       <button id="parkbutton">Saved Parks</button>
       <image id="logo" src="public.js/DayTripper.png"></image>
 
@@ -123,11 +125,11 @@
         <img  id="stargazing" src="public.js/stargazing.jpg"></img>
         <p id="hikinglabel">Hiking</p>
         <img  id="hiking" src="public.js/hiking.jpg"></img>
-        <!-- <p>Kayaking</p> -->
+        <p id="kayaklabel">Kayaking</p> 
         <img  id="kayaking" src="public.js/kayaking.jpg"></img>
-        <!-- <p>Camping</p> -->
+        <p id="camplabel">Camping</p>
         <img  id="camping" src="public.js/camping.jpg"></img>
-        <!-- <p>Horseback</p> -->
+        <p id="horselabel">Horseback</p>
         <img  id="horseback" src="public.js/horseback.jpg"></img>
       </div>
 
