--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -127,6 +127,38 @@
 
   <div id="containerfour" class="hidden"></div>
 
+
+  <footer id="main-footer" class="bg-dark text-white pt-4 pb-2">
+    <div class="container">
+      <div class="row">
+        
+        <div class="col-md-4 mb-3">
+          <h5>DayTripper</h5>
+          <p class="text-muted small">© 2025 DayTripper. All rights reserved.</p>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="#search-section" class="text-white-50">Search Parks</a></li>
+            <li><a href="#activities" class="text-white-50">Activities</a></li>
+            <li><a href="#" class="text-white-50">Privacy Policy</a></li>
+            <li><a href="#" class="text-white-50">Terms of Service</a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <h5>Contact</h5>
+          <ul class="list-unstyled">
+            <li><a href="mailto:info@daytripper.com" class="text-white-50">info@daytripper.com</a></li>
+            <!-- <li><a href="#" class="text-white-50">Twitter</a></li> -->
+            <!-- <li><a href="#" class="text-white-50">Instagram</a></li> -->
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -134,4 +166,8 @@
   <script src="index.js"></script>
 
 </body>
-</html>
+</html> 
+ 
+
+
+ 
